config/k8s/peeps-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peeps-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peeps-service
  template:
    metadata:
      labels:
        app: peeps-service
    spec:
      containers:
       - name: peeps-service
         image: gentselimi/peeps-service
---
apiVersion: v1
kind: Service
metadata:
  name: peeps-service
spec: 
  selector:
    app: peeps
  ports:
    - name: peeps
      protocol: TCP
      port: 5100
      targetPort: 5100
