config/k8s/peeps-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: peepsservice
spec:
  containers:
    - name: peepsservice
      image: equationalapplications/peeps-service:0.0.1

---
apiVersion: v1
kind: Service
metadata:
  name: peepsservice-clusterip
spec:
  selector:
    app: peepsservice
  ports:
   - name: peepsservice
     protocol: TCP
     port: 5100
     targetPort: 5100
