config/k8s/query-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
       - name: query-service
         image: gentselimi/queryservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec: 
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 5200
      targetPort: 5200
