config/k8s/rabbitmq-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-statefulset
spec:
  serviceName: rabbitmq-statefulset
  replicas: 1
  selector: 
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec: 
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management
          ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp
              protocol: TCP
              containerPort: 5672
          livenessProbe:
            exec: 
              command: 
                - "rabbitmq-diagnostics"
                - "ping"
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 15
          readinessProbe: 
            exec: 
              command: 
                - "rabbitmq-diagnostics"
                - "check_port_connectivity"
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 15
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    app: rabbitmq
spec: 
  type: LoadBalancer
  selector: 
    app: rabbitmq
  ports: 
    - port: 5672
      targetPort: 5672
      name: amqp
      protocol: TCP
    - port: 15672
      targetPort: 15672
      name: http
      protocol: TCP
